--- a/templates/docs/common/get.html
+++ b/templates/docs/common/get.html
@@ -17,10 +17,10 @@
             <tr>
                 <td>{{ mizan.account_code }}</td>
                 <td>{{ mizan.account_name }}</td>
-                <td>{{ mizan.total_balance }}</td>
-                <td>{{ mizan.total_balance }}</td>
-                <td>{{ mizan.total_balance }}</td>
-                <td>{{ mizan.total_balance }}</td>
+                <td>{{ mizan.total_balance_january }}</td>
+                <td>{{ mizan.total_balance_february }}</td>
+                <td>{{ mizan.total_balance_march }}</td>
+                <td>{{ mizan.total_balance_april }}</td>
             </tr>
         {% endfor %}
 </table>
